@@ -547,6 +547,7 @@ wxGTK:
 wxMSW:
 
 - Add support for CURRENCY and SCODE types to OLE Automation helpers (PB).
+- Allow setting LCID used by wxAutomationObject (PB).
 
 
 2.9.4: (released 2012-07-09)
